--- a/index.html
+++ b/index.html
@@ -1,4 +1,207 @@
----
-layout: home
-author_profile: true
----
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Simon Harrer">
+    <title>./sh publish</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="album.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</head>
+<body>
+
+
+<header>
+  <div class="collapse bg-dark" id="navbarHeader">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-md-7 py-4">
+          <h4 class="text-white">About</h4>
+          <p class="text-muted">
+            Hello. 
+            I'm Simon and I work as a senior consultant at INNOQ. 
+            I've (co-)authored a lot of stuff, from the best-selling book 'Java by Comparison' and several microsites or articles to software.
+            Here I'm listing the ones that are most dear to me.</p>
+        </div>
+        <div class="col-sm-4 offset-md-1 py-4">
+          <h4 class="text-white">Contact</h4>
+          <ul class="list-unstyled">
+            <li><a href="https://twitter.com/simonharrer" class="text-white">Follow on Twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/simonharrer/" class="text-white">Connect on LinkedIn</a></li>
+            <li><a href="mailto:simon.harrer@gmail.com" class="text-white">Email me</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="container d-flex justify-content-between">
+      <a href="#" class="navbar-brand d-flex align-items-center">
+        <svg class="bi bi-book" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" d="M3.214 1.072C4.813.752 6.916.71 8.354 2.146A.5.5 0 018.5 2.5v11a.5.5 0 01-.854.354c-.843-.844-2.115-1.059-3.47-.92-1.344.14-2.66.617-3.452 1.013A.5.5 0 010 13.5v-11a.5.5 0 01.276-.447L.5 2.5l-.224-.447.002-.001.004-.002.013-.006a5.017 5.017 0 01.22-.103 12.958 12.958 0 012.7-.869zM1 2.82v9.908c.846-.343 1.944-.672 3.074-.788 1.143-.118 2.387-.023 3.426.56V2.718c-1.063-.929-2.631-.956-4.09-.664A11.958 11.958 0 001 2.82z" clip-rule="evenodd"/>
+          <path fill-rule="evenodd" d="M12.786 1.072C11.188.752 9.084.71 7.646 2.146A.5.5 0 007.5 2.5v11a.5.5 0 00.854.354c.843-.844 2.115-1.059 3.47-.92 1.344.14 2.66.617 3.452 1.013A.5.5 0 0016 13.5v-11a.5.5 0 00-.276-.447L15.5 2.5l.224-.447-.002-.001-.004-.002-.013-.006-.047-.023a12.582 12.582 0 00-.799-.34 12.96 12.96 0 00-2.073-.609zM15 2.82v9.908c-.846-.343-1.944-.672-3.074-.788-1.143-.118-2.387-.023-3.426.56V2.718c1.063-.929 2.631-.956 4.09-.664A11.956 11.956 0 0115 2.82z" clip-rule="evenodd"/>
+        </svg>        
+        <strong style="margin-left: .5em;">./sh show projects</strong>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
+</header>
+
+<main role="main">
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img src="remotemobprogramming.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">Remote Mob Programming Site</h5>
+              <p class="card-text">
+                Remote Mob Programming: home but not alone. I don't want to work differently anymore. Here's why.
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="https://remotemobprogramming.org" class="btn btn-sm btn-outline-secondary">Learn why</a>
+                <small class="text-muted">written with <a href="https://twitter.com/jochen_christ">Jochen</a> &amp; <a href="https://twitter.com/waterback">Martin</a></small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img src="remotemobprogramming-book.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">Remote Mob Programming Book</h5>
+              <p class="card-text">Our book on Remote Mob Programming sharing our experiences of working like this for two years.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="https://leanpub.com/remotemobprogramming" class="btn btn-sm btn-outline-secondary">Get free eBook</a>
+                <small class="text-muted">written with <a href="https://twitter.com/jochen_christ">Jochen</a> &amp; <a href="https://twitter.com/waterback">Martin</a></small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img src="mob.svg" style="padding-top:76px;padding-bottom:76px;" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">mob tool</h5>
+              <p class="card-text">Swift git handovers for teams doing remote mob programming with the cli tool 'mob'. It uses WIP commits on a dedicated branch.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="https://github.com/remotemobprogramming/mob" class="btn btn-sm btn-outline-secondary">Try it out</a>
+                <small class="text-muted">Open Source</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img src="javabycomparison.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">Java by Comparison Book</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="https://java.by-comparison.com" class="btn btn-sm btn-outline-secondary">Get the book</a>
+                <small class="text-muted">written with <a href="https://twitter.com/Lynyus">Linus</a>  &amp; Jörg</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img src="comparisonjeopardy.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">Comparison Jeopardy</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="https://java.by-comparison.com/game" class="btn btn-sm btn-outline-secondary">Play it</a>
+                <small class="text-muted">written with <a href="https://twitter.com/Lynyus">Linus</a></small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img src="javabycomparison-kata.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">Java by Comparison Kata</h5>
+              <p class="card-text">
+                Code katas are a perfect way to learn clean coding. 
+                Ours is designed as a two-hour team exercise and workshop. 
+                The objective is to use the Java by Comparison method to clean up our fictitious, specially-uglified legacy code.
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="https://java.by-comparison.com/kata" class="btn btn-sm btn-outline-secondary">Do the kata</a>
+                <small class="text-muted">written with <a href="https://twitter.com/Lynyus">Linus</a></small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img src="effectivehomeoffice.jpg" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">Effective Home Office</h5>
+              <p class="card-text">An opinionated and free guide to effectively work from home.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="https://effectivehomeoffice.com" class="btn btn-sm btn-outline-secondary">Read guide</a>
+                <small class="text-muted">written with <a href="https://twitter.com/jochen_christ">Jochen</a></small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img src="gitops.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">GitOps Site</h5>
+              <p class="card-text">An opinionated and free guide to effectively work from home.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="https://gitops.tech" class="btn btn-sm btn-outline-secondary">Learn about GitOps</a>
+                <small class="text-muted">written with <a href="https://twitter.com/fbeetz_">Florian</a>  &amp; Anja</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img src="gitops-book.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">GitOps Book</h5>
+              <p class="card-text">An opinionated and free guide to effectively work from home.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="https://leanpub.com/gitops" class="btn btn-sm btn-outline-secondary">Get free eBook</a>
+                <small class="text-muted">written with <a href="https://twitter.com/fbeetz_">Florian</a>  &amp; Anja</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</main>
+
+<footer class="text-muted">
+  <div class="container">
+    <p class="float-right">
+      <a href="#">Back to top</a>
+    </p>
+    <p>Dr. Simon Harrer &copy; 2020</p>
+  </div>
+</footer>
+
+<script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+<noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+</body>
