--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
       <a href="#">Back to top</a>
     </p>
     <p>Dr. Simon Harrer &copy; 2020</p>
+    <p><a href="/legal">Legal Notice and Privacy Policy</a></p>
   </div>
 </footer>
 
