--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             <div class="card-body">
               <h5 class="card-title">Remote Mob Programming</h5>
               <p class="card-text">
-                Remote Mob Programming: home but not alone. I don't want to work differently anymore. Here's why.
+                For two years, I've been working from home fulltime doing mob programming. 
+                I don’t want to work differently anymore. 
+                Interested?
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
