--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             <img src="javabycomparison.jpeg" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
             <div class="card-body">
               <h5 class="card-title">Java by Comparison</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">With the experience of six years teaching Java at University, I've co-authored the book 'Java by Comparison'. 
+                It comes with a unique didactic concept teaching you how to write readable code through before/after comparisons.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="https://www.amazon.de/dp/1680502875/" class="btn btn-sm btn-outline-secondary">Paperback</a>
