--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <div class="col-md-6">
           <div class="card mb-6 shadow-sm">
-            <img src="gitops-book.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <img src="gitops.jpg" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
             <div class="card-body">
               <h5 class="card-title">GitOps</h5>
               <p class="card-text">I had a lot of questions on GitOps.
