--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               <h5 class="card-title">Remote Mob Programming</h5>
               <p class="card-text">
                 For two years, I've been working from home fulltime doing mob programming. 
+                It changed my view on how software should be developed.
                 I don’t want to work differently anymore. 
                 Interested?
               </p>
