--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="album.css">
     <link rel="icon" type="image/svg+xml" href="https://simonharrer.com/favicon.svg">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@simonharrer">
+    <meta name="twitter:creator" content="@simonharrer">
+    <meta name="twitter:title" content="Simon's Projects">
+    <meta name="twitter:description" content="Simon's Projects: Remote Mob Programming, Java by Comparison, Effective Home Office, and GitOps.">
+    <meta name="twitter:image" content="https://simonharrer.com/twitter-card.png">
   </head>
 <body>
 
