--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
   <div class="album py-5 bg-light">
     <div class="container">
 
-      <div class="row">
-        <div class="col-md-6">
-          <div class="card mb-6 shadow-sm">
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+          <div class="card shadow-sm h-100">
             <img src="remotemobprogramming.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
             <div class="card-body">
               <h5 class="card-title">Remote Mob Programming</h5>
@@ -81,57 +81,60 @@
                 I don’t want to work differently anymore. 
                 Interested?
               </p>
-              <div class="d-flex justify-content-between align-items-center">
+              <div class="text-center">
                 <div class="btn-group">
                   <a href="https://remotemobprogramming.org" class="btn btn-sm btn-outline-secondary">Website</a>
                   <a href="https://www.amazon.de/gp/product/3982112605/" class="btn btn-sm btn-outline-secondary">Paperback</a>
                   <a href="https://leanpub.com/remotemobprogramming" class="btn btn-sm btn-outline-secondary">eBook</a>
                   <a href="https://github.com/remotemobprogramming/mob" class="btn btn-sm btn-outline-secondary">'mob' Tool</a>
                 </div>
-                <small class="text-muted">with <a href="https://twitter.com/jochen_christ">Jochen</a> &amp; <a href="https://twitter.com/waterback">Martin</a></small>
               </div>
+              <p class="card-text text-center">
+                <small class="text-muted" style="margin-top: -1em;">Co-authored with <a href="https://twitter.com/jochen_christ">Jochen</a> &amp; <a href="https://twitter.com/waterback">Martin</a></small>              
+              </p>
             </div>
           </div>
         </div>
 
-        <div class="col-md-6">
-          <div class="card mb-6 shadow-sm">
+        <div class="col mb-4">
+          <div class="card shadow-sm h-100">
             <img src="javabycomparison.jpeg" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
             <div class="card-body">
               <h5 class="card-title">Java by Comparison</h5>
               <p class="card-text">Based on the experience of six years teaching Java at University. 
                 The book comes with a unique didactic concept on how to write readable code through before/after comparisons.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+              <div class="text-center">
+                  <div class="btn-group">
                   <a href="https://www.amazon.de/dp/1680502875/" class="btn btn-sm btn-outline-secondary">Paperback</a>
                   <a href="https://pragprog.com/books/javacomp" class="btn btn-sm btn-outline-secondary">eBook</a>
                   <a href="https://java.by-comparison.com/kata" class="btn btn-sm btn-outline-secondary">Kata</a>
                   <a href="https://java.by-comparison.com/game" class="btn btn-sm btn-outline-secondary">Jeopardy</a>
                 </div>
-                <small class="text-muted">with <a href="https://twitter.com/Lynyus">Linus</a>  &amp; <a href="https://www.linkedin.com/in/joerglenhard/">Jörg</a></small>
               </div>
+              <p class="card-text text-center">
+                <small class="text-muted">Co-authored with <a href="https://twitter.com/Lynyus">Linus</a>  &amp; <a href="https://www.linkedin.com/in/joerglenhard/">Jörg</a></small>
+              </p>
             </div>
           </div>
         </div>
-      </div>
-        <div class="row" style="margin-top: 2em;">
-
-        <div class="col-md-6">
-          <div class="card mb-6 shadow-sm">
+        <div class="col mb-4">
+          <div class="card shadow-sm h-100">
             <img src="effectivehomeoffice.jpg" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
             <div class="card-body">
               <h5 class="card-title">Effective Home Office</h5>
               <p class="card-text">An opinionated and free guide to effectively work from home.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <a href="https://effectivehomeoffice.com" class="btn btn-sm btn-outline-secondary">Guide</a>
-                <small class="text-muted">with <a href="https://twitter.com/jochen_christ">Jochen</a></small>
+              <div class="text-center">
+                <a href="https://effectivehomeoffice.com" class="btn btn-sm btn-outline-secondary">Free Guide</a>
               </div>
+              <p class="card-text text-center">
+                <small class="text-muted">with <a href="https://twitter.com/jochen_christ">Jochen</a></small>
+              </p>
             </div>
           </div>
         </div>
 
-        <div class="col-md-6">
-          <div class="card mb-6 shadow-sm">
+        <div class="col mb-4">
+          <div class="card shadow-sm h-100">
             <img src="gitops.jpg" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
             <div class="card-body">
               <h5 class="card-title">GitOps</h5>
@@ -141,14 +144,16 @@
                 How does GitOps work? 
                 Trying to answer all of those questions.           
               </p>
-              <div class="d-flex justify-content-between align-items-center">
+              <div class="text-center">
                 <div class="btn-group">
                   <a href="https://gitops.tech" class="btn btn-sm btn-outline-secondary">Website</a>
                   <a href="https://leanpub.com/gitops" class="btn btn-sm btn-outline-secondary">eBook</a>
                   <a href="https://gitops.tech/tutorial" class="btn btn-sm btn-outline-secondary">Tutorial</a>
                 </div>
-                <small class="text-muted">with <a href="https://twitter.com/fbeetz_">Florian</a>  &amp; <a href="https://www.linkedin.com/in/anja-kammer-berlin/">Anja</a></small>
               </div>
+              <p class="card-text text-center">
+                <small class="text-muted">with <a href="https://twitter.com/fbeetz_">Florian</a>  &amp; <a href="https://www.linkedin.com/in/anja-kammer-berlin/">Anja</a></small>
+              </p>
             </div>
           </div>
         </div>
