--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
               <h5 class="card-title">Effective Home Office</h5>
               <p class="card-text">An opinionated and free guide to effectively work from home.</p>
               <div class="text-center">
-                <a href="https://effectivehomeoffice.com" class="btn btn-sm btn-outline-secondary">Free Guide</a>
+                <a href="https://effectivehomeoffice.com" class="btn btn-sm btn-outline-secondary">Read the free Guide</a>
               </div>
               <p class="card-text text-center">
-                <small class="text-muted">with <a href="https://twitter.com/jochen_christ">Jochen</a></small>
+                <small class="text-muted">Co-authored with <a href="https://twitter.com/jochen_christ">Jochen</a></small>
               </p>
             </div>
           </div>
@@ -152,7 +152,7 @@
                 </div>
               </div>
               <p class="card-text text-center">
-                <small class="text-muted">with <a href="https://twitter.com/fbeetz_">Florian</a>  &amp; <a href="https://www.linkedin.com/in/anja-kammer-berlin/">Anja</a></small>
+                <small class="text-muted">Co-authored with <a href="https://twitter.com/fbeetz_">Florian</a>  &amp; <a href="https://www.linkedin.com/in/anja-kammer-berlin/">Anja</a></small>
               </p>
             </div>
           </div>
