--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               </p>
               <div class="text-center">
                 <div class="btn-group">
-                  <a href="https://remotemobprogramming.org" class="btn btn-sm btn-outline-secondary">Website</a>
+                  <a href="https://www.remotemobprogramming.org" class="btn btn-sm btn-outline-secondary">Website</a>
                   <a href="https://www.amazon.de/gp/product/3982112605/" class="btn btn-sm btn-outline-secondary">Paperback</a>
                   <a href="https://leanpub.com/remotemobprogramming" class="btn btn-sm btn-outline-secondary">eBook</a>
                   <a href="https://github.com/remotemobprogramming/mob" class="btn btn-sm btn-outline-secondary">'mob' Tool</a>
