Add abfalltermine to page

--- a/index.html
+++ b/index.html
@@ -159,6 +159,25 @@
         </div>
 
 
+        <div class="col mb-4">
+          <div class="card shadow-sm h-100">
+            <img src="abfalltermine.png" background="#55595c" color="#eceeef" class="card-img-top" text="Thumbnail"/>
+            <div class="card-body">
+              <h5 class="card-title">Abfalltermine SaaS</h5>
+              <p class="card-text">
+                Service for helping citizens to know when to put out their garbage,
+                including Web, iOS and Android apps.
+                Cutomers are County Bamberg and County Forchheim.
+              </p>
+              <div class="text-center">
+                <div class="btn-group">
+                  <a href="https://www.abfalltermine-bamberg.de" class="btn btn-sm btn-outline-secondary">County Bamberg</a>
+                  <a href="https://www.abfalltermine-forchheim.de" class="btn btn-sm btn-outline-secondary">County Forchheim</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
