--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                   <a href="https://www.remotemobprogramming.org" class="btn btn-sm btn-outline-secondary">Website</a>
                   <a href="https://www.amazon.de/gp/product/3982112605/" class="btn btn-sm btn-outline-secondary">Paperback</a>
                   <a href="https://leanpub.com/remotemobprogramming" class="btn btn-sm btn-outline-secondary">eBook</a>
-                  <a href="https://github.com/remotemobprogramming/mob" class="btn btn-sm btn-outline-secondary">'mob' Tool</a>
+                  <a href="https://mob.sh" class="btn btn-sm btn-outline-secondary">'mob' Tool</a>
+                  <a href="https://www.innoq.com/en/topics/remote-mob-programming-experience/" class="btn btn-sm btn-outline-secondary">Teamevent</a>
                 </div>
               </div>
               <p class="card-text text-center">
