--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <p class="card-text">
                 Service for helping citizens to know when to put out their garbage,
                 including Web, iOS and Android apps.
-                Cutomers are County Bamberg and County Forchheim.
+                Customers are County Bamberg and County Forchheim.
               </p>
               <div class="text-center">
                 <div class="btn-group">
