--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <h5 class="card-title">Effective Home Office</h5>
               <p class="card-text">An opinionated and free guide to effectively work from home.</p>
               <div class="text-center">
-                <a href="https://effectivehomeoffice.com" class="btn btn-sm btn-outline-secondary">Read the free Guide</a>
+                <a href="https://effectivehomeoffice.github.io" class="btn btn-sm btn-outline-secondary">Read the free Guide</a>
               </div>
               <p class="card-text text-center">
                 <small class="text-muted">Co-authored with <a href="https://twitter.com/jochen_christ">Jochen</a></small>
